qt4-x11 (4:4.8.5+git192-g085f851+dfsg-1) UNRELEASED; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream git snapshot. This includes the fix for CVE-2013-4549: XML
    Entity Expansion Denial of Service. Set severity to medium.
  * Update symbols files with buildds' logs.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Thu, 05 Dec 2013 12:10:03 -0300

qt4-x11 (4:4.8.5+git121-g2a9ea11+dfsg1-2) unstable; urgency=low

  * Remove Fix_JavaScriptCore_ftbfs_on_mips64_el.patch, it makes 32 bits
    platforms FTBFS.
  * Take back s390x_jscore.diff to it's original state.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 11 Oct 2013 20:53:25 -0300

qt4-x11 (4:4.8.5+git121-g2a9ea11+dfsg1-1) unstable; urgency=low

  * Add Fix_JavaScriptCore_ftbfs_on_mips64_el.patch. It just needs to be
    approved upstream, but it has been already ACKed (Closes: #719763).
    - Fix s390x_jscore.diff so it can be applied on top of the above mentioned
    patch. This last one seems not pushed upstream.
  * Remove sources with minified javascript libs without source
    (Closes: #723036).
    - Increase DFSG revision number.
    I have tried building without those files and everything seems OK except a
    documentation html file that shows the minified javascript code which has
    been removed, so I'll leave it like that.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Fri, 11 Oct 2013 15:23:32 -0300

qt4-x11 (4:4.8.5+git121-g2a9ea11+dfsg-1) unstable; urgency=low

  * Upstream snapshot, git v4.8.5+git121-g2a9ea11.
  * Fix shortcuts with_secondary xkb layout (Closes: #719064).
    Thanks Boris Pek for pointing it out.
  * Refresh patches.
  * Remove patches applied upstream:
    - Add-support-for-the-Linux-m68k-platform.patch.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Sat, 14 Sep 2013 21:28:44 -0300

qt4-x11 (4:4.8.5+dfsg-4) unstable; urgency=low
