@@ -17,7 +17,7 @@ Last-Update: 2011-12-26
 
 --- a/src/corelib/io/qprocess_unix.cpp
 +++ b/src/corelib/io/qprocess_unix.cpp
-@@ -532,6 +532,13 @@ static char **_q_dupEnvironment(const QP
+@@ -555,6 +555,13 @@ static char **_q_dupEnvironment(const QP
      return envp;
  }
  
@@ -31,7 +31,7 @@ Last-Update: 2011-12-26
  #ifdef Q_OS_MAC
  Q_GLOBAL_STATIC(QMutex, cfbundleMutex);
  #endif
-@@ -660,6 +667,7 @@ void QProcessPrivate::startProcess()
+@@ -683,6 +690,7 @@ void QProcessPrivate::startProcess()
  #if defined(Q_OS_QNX)
      pid_t childPid = spawnChild(workingDirPtr, argv, envp);
  #else
@@ -39,7 +39,7 @@ Last-Update: 2011-12-26
      pid_t childPid = fork();
      int lastForkErrno = errno;
  #endif
-@@ -1357,6 +1365,7 @@ bool QProcessPrivate::startDetached(cons
+@@ -1380,6 +1388,7 @@ bool QProcessPrivate::startDetached(cons
          return false;
      }
  
@@ -47,7 +47,7 @@ Last-Update: 2011-12-26
      pid_t childPid = fork();
      if (childPid == 0) {
          struct sigaction noaction;
-@@ -1369,6 +1378,7 @@ bool QProcessPrivate::startDetached(cons
+@@ -1392,6 +1401,7 @@ bool QProcessPrivate::startDetached(cons
          qt_safe_close(startedPipe[0]);
          qt_safe_close(pidPipe[0]);
  
