@@ -2,7 +2,7 @@ Description: Add support for s390/s390x architectures
 Author: Dan Horák <dan@danny.cz>
 Origin: vendor (http://trac.webkit.org/changeset?old_path=%2Ftrunk&old=71843+&new_path=%2Ftrunk&new=71844+)
 Forwarded: no
-Last-Update: 2011-08-03
+Last-Update: 2013-12-05
 
 ---
  src/3rdparty/javascriptcore/JavaScriptCore/wtf/Platform.h |   14 +++++++++++++-
@@ -29,12 +29,12 @@ Last-Update: 2011-08-03
  /* CPU(X86) - i386 / x86 32-bit */
  #if   defined(__i386__) \
      || defined(i386)     \
-@@ -873,7 +885,7 @@
+@@ -895,7 +907,7 @@
  #endif
  
  #if !defined(WTF_USE_JSVALUE64) && !defined(WTF_USE_JSVALUE32) && !defined(WTF_USE_JSVALUE32_64)
--#if (CPU(X86_64) && (OS(UNIX) || OS(WINDOWS) || OS(SOLARIS) || OS(HPUX))) || (CPU(IA64) && !CPU(IA64_32)) || CPU(ALPHA) || CPU(AIX64) || CPU(SPARC64)
-+#if (CPU(X86_64) && (OS(UNIX) || OS(WINDOWS) || OS(SOLARIS) || OS(HPUX))) || (CPU(IA64) && !CPU(IA64_32)) || CPU(ALPHA) || CPU(AIX64) || CPU(SPARC64) || CPU(S390X)
+-#if (CPU(X86_64) && (OS(UNIX) || OS(WINDOWS) || OS(SOLARIS) || OS(HPUX))) || (CPU(IA64) && !CPU(IA64_32)) || CPU(ALPHA) || CPU(AIX64) || CPU(SPARC64) || CPU(MIPS64)
++#if (CPU(X86_64) && (OS(UNIX) || OS(WINDOWS) || OS(SOLARIS) || OS(HPUX))) || (CPU(IA64) && !CPU(IA64_32)) || CPU(ALPHA) || CPU(AIX64) || CPU(SPARC64) || CPU(MIPS64) || CPU(S390x)
  #define WTF_USE_JSVALUE64 1
  #elif CPU(ARM) || CPU(PPC64)
  #define WTF_USE_JSVALUE32 1
